--- a/Resources/Node.js/views/indexng.jade
+++ b/Resources/Node.js/views/indexng.jade
@@ -16,16 +16,15 @@ block body
 
     
     div(ng-controller='FirstController')
-            label Name only
-                     input(ng-model='search._id')
-            p List of IEML
-
-            ul.page-sidebar-menu(ng-repeat='item in List | filter:search:strict')
+      label ieml filter only 
+               input(ng-model='search.ieml')
+           p List of IEML
+           ul.page-sidebar-menu(ng-repeat='item in List | filter:search')
+              #searchObjResults
                 li(ng-class='group.groupStyle')
-                    a(href="{{item._id}}")
-                      i(ng-class='group.iconStyle')
-                      span.title {{item.ieml}}
-                    //span(ng-class="group.spanStyle")
+                   p
+                       span.title {{item.ieml}}
+                     
     div(ng-view)
 
     script(src='../libs/angular/angular.js')
