--- a/Resources/Node.js/views/nglayout.jade
+++ b/Resources/Node.js/views/nglayout.jade
@@ -4,7 +4,12 @@ html(ng-app="iemlng")
     meta(charset='utf8')
     base(href='/ngindex')
     title Angular Express Bootstrap Seed App
-    //link(rel='stylesheet', href='../libs/bootstrap/css/bootstrap.min.css')
-    //link(rel='stylesheet', href='/css/app.css')
+    link(rel='stylesheet', href='/libs/bootstrap/dist/css/bootstrap.min.css')
+   
+    link(rel='stylesheet', href='/libs/angular-ui-layout/ui-layout.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    // link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css")
+    // link(rel="stylesheet", href="https://rawgithub.com/angular-ui/ui-layout/v1.0.5/ui-layout.css")
+ 
   body
     block body
