--- a/Resources/Node.js/views/indexng.jade
+++ b/Resources/Node.js/views/indexng.jade
@@ -2,7 +2,7 @@
 extends nglayout
 
 block body
-
+  div(ng-controller='FirstController')
     div(ui-layout)
         div(ui-layout-container,class=" html-back", size="10%")
           div
@@ -11,12 +11,12 @@ block body
                   li
                    a(href='/') Home
                   li
-                    a(href='/second') Show view #2
+                    a(href='/second' ) Show view #2
         
         div(ui-layout-container) 
           div(ui-layout="{flow : 'column'}")
             div(ui-layout-container, class=" html-back", size="20%")
-              div(ng-controller='FirstController')
+              div()
                   label ieml filter only 
                            input(ng-model='search.ieml')
                        p List of IEML
@@ -25,6 +25,8 @@ block body
                             li(ng-class='group.groupStyle')
                                p
                                    span.title {{item.ieml}}
+                                   a(href="/second" ng-click="openItemEdit(item.ieml,this)") {{item.ieml}}
+
             div(ui-layout-container, class=" js-back")
               p Dyn views here
               div(ng-view)
