--- a/Resources/Node.js/views/partials/ngsecond.jade
+++ b/Resources/Node.js/views/partials/ngsecond.jade
@@ -2,8 +2,12 @@
 
 
 block body
-	div
-	h2 CONTENT OF ngsecond.jade view
+
+         div(ng-controller='FirstController')
+            input(type='text', name='input', ng-model='currIemlId')
+          
+        
+          
     
                
 
