modified:   app.js 	modified:   public/js/app_andrew.js 	modified:   public/js/partials/sidebar.html 	modified:   routes/restapi.js
Adding create functionality

--- a/Resources/Node.js/public/js/partials/sidebar.html
+++ b/Resources/Node.js/public/js/partials/sidebar.html
@@ -1,4 +1,14 @@
 	<div class="container">
+	
+		IEML: <input type="text" data-ng-model="newEntry.ieml"/><br/>
+		FR: <input type="text" data-ng-model="newEntry.fr"/><br/>
+		EN: <input type="text" data-ng-model="newEntry.en"/><br/>
+		<br/>
+		{{currentError}}
+		<br/>
+		<button data-ng-model="currentError" data-ng-click="addEntry()">Add</button><br/>
+		<br/>
+		
 		Filter: <input type="text" data-ng-model="name"/> 
 		<br/>
 		<ul>
