modified:   Resources/Node.js/app.js 	modified:   Resources/Node.js/public/js/app_andrew.js 	modified:   Resources/Node.js/public/js/partials/sidebar.html 	modified:   Resources/Node.js/routes/restapi.js Adding "delete" functionality

--- a/Resources/Node.js/public/js/partials/sidebar.html
+++ b/Resources/Node.js/public/js/partials/sidebar.html
@@ -9,9 +9,14 @@
 		<button data-ng-model="currentError" data-ng-click="addEntry()">Add</button><br/>
 		<br/>
 		
+		
+		
 		Filter: <input type="text" data-ng-model="name"/> 
 		<br/>
 		<ul>
-			<li data-ng-repeat="entry in List | filter: name"> {{entry.ieml}} </li>
+			<li data-ng-repeat="entry in List | filter: name"> 
+				{{entry.ieml}}  
+				<button data-ng-click="deleteEntry($index)">Rem</button> {{$index}}
+			</li>
 		</ul>
 	</div>
