--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -8,7 +8,7 @@
     <form name="projectForm">
       <md-input-container>
         <label>ieml</label>
-        <input md-maxlength="100" required name="ieml" ng-model="iemlValue">
+        <input type="text" md-maxlength="100" required name="ieml" ng-model="iemlValue" ng-change="changeiemlValue()">
         <div ng-messages="projectForm.ieml.$error">
           <div ng-message="required">This is required.</div>
           <div ng-message="md-maxlength">The name has to be less than 100 characters long.</div>
@@ -16,20 +16,21 @@
       </md-input-container>
       <md-input-container>
         <label>French</label>
-        <input required name="french" ng-model="frenchValue">
+        <input required name="french" ng-model="frenchValue" ng-change="changefrenchValue()">
         <div ng-messages="projectForm.french.$error">
           <div ng-message="required">This is required.</div>
         </div>
       </md-input-container>
       <md-input-container>
         <label>English</label>
-        <input required name="english" ng-model="englishValue">
+        <input required name="english" ng-model="englishValue" ng-change="changeenglishValue()">
         <div ng-messages="projectForm.english.$error">
           <div ng-message="required">This is required.</div>
         </div>
       </md-input-container>
     </form>
 	<md-button class="md-raised" ng-click="cancelEdit()" ng-disabled="projectForm.$invalid"> Submit </md-button>	
-	<md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>	
+	<md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
+	<label>{{tempString}}</label>
   </md-content>
 </div>
