Hooking up the sumbit button from form editor.
	modified:   public/js/material.js
	modified:   public/js/partials/editIeml.html
	modified:   views/material.html

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -4,6 +4,7 @@
 <!-- https://www.google.com/design/icons/-->
 
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="../libs/angular-material/angular-material.css">
 	
 	<!-- Icons -->
