--- a/Resources/Node.js/public/js/partials/editIeml.html
+++ b/Resources/Node.js/public/js/partials/editIeml.html
@@ -36,7 +36,7 @@
         </div>
       </md-input-container>
     </form>
-	<md-button class="md-raised" ng-click="cancelEdit()" ng-disabled="projectForm.$invalid"> Submit </md-button>	
+	<md-button class="md-raised" ng-click="submitEdit()" ng-disabled="projectForm.$invalid"> Submit </md-button>	
 	<md-button class="md-raised" ng-click="cancelEdit()"> Cancel </md-button>
 	<br/><br/>
 	<label>{{tempString}}</label>
