--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -1,3 +1,19 @@
+
+ #vertical-container {
+  height: 292px;
+  width: 400px; }
+ .repeated-item {
+
+  box-sizing: border-box;
+  height: 40px;
+  padding-top: 10px; }
+ md-content {
+  margin: 16px; }
+ 
+ .md-virtual-repeat-container .md-virtual-repeat-offsetter {
+  padding-left: 16px; }
+  
+  
  .custom-chips .md-chip {
   position: relative;
   padding-right: 35px; }
