--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -71,7 +71,7 @@
 				</md-button>
 				  
 				<md-button class="md-raised" style="text-transform: none;" ng-click="viewEntry(List.indexOf(item))">
-				  {{item.ieml}} 
+				  {{item.IEML}} 
 				</md-button>	
 				
 			  </div>
