--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -47,3 +47,14 @@
         fill: white; }
        .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:hover,  .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
         background: rgba(255, 0, 0, 0.8); }
+
+
+.gridListDynamicTiles .gray {
+  background: #f5f5f5; }
+.gridListDynamicTiles .green {
+  background: #b9f6ca; }
+.gridListDynamicTiles .yellow {
+  background: #ffff8d; }
+.gridListDynamicTiles .blue {
+  background: #84ffff; }
+
