align menu icon and text

--- a/Resources/Node.js/public/stylesheets/mystyle.css
+++ b/Resources/Node.js/public/stylesheets/mystyle.css
@@ -48,7 +48,7 @@
        .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:hover,  .custom-chips .md-chip .md-chip-remove-container button.vegetablechip:focus {
         background: rgba(255, 0, 0, 0.8); }
 
-
+<!-- styles for dictionary edit-->
 .gridListDynamicTiles .gray {
   background: #f5f5f5; }
 .gridListDynamicTiles .green {
@@ -58,3 +58,10 @@
 .gridListDynamicTiles .blue {
   background: #84ffff; }
 
+
+i.material-icons {
+    vertical-align: middle;
+}
+span.ng-scope {
+    vertical-align: middle;
+}
