Not sure where it got broken, but this change fixes it. 	modified:   views/material.html

--- a/Resources/Node.js/views/material.html
+++ b/Resources/Node.js/views/material.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	  
 	<!-- following css is required to get the "delete" button in side chips to look nice -->
-	<link rel="stylesheet" href="stylesheets/mystyle.css">
+	<link rel="stylesheet" href="/stylesheets/mystyle.css">
 	
   </head>
   
